2010-06-22  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneProject.cs:
	* gtk-gui/gui.stetic:
	* IPhoneBuildExtension.cs:
	* Gui/IPhoneOptionsPanel.cs:
	* MonoDevelop.IPhone.addin.xml:
	* gtk-gui/MonoDevelop.IPhone.Gui.IPhoneOptionsWidget.cs: Added
	  options for hi-res icons.

2010-06-21  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneBuildExtension.cs: Include UIDeviceFamily key in 3.2
	  builds.

	* IPhoneFramework.cs: Filter out simulator targets.

	* Gui/IPhoneBuildOptionsPanel.cs: Only show min OS version
	  values that are valid for current SDK version.

2010-06-18  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneSdkVersion.cs: Add some conveniences.

	* IPhoneBuildExtension.cs: Use proper DTSDKName and
	  DTPlatformVersion values from Apple's plists. Always include
	  UIDeviceFamily key when building with > 3.2 SDK.

	* IPhoneFramework.cs: Methods for looking up DTSDKName and
	  DTPlatformVersion.,

2010-06-15  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/IPhoneOptionsPanel.cs: Fix Bug 614551 - Cannot clear
	  icon selection once made in Project Settings.

2010-06-10  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneBuildExtension.cs: Better build output.

2010-06-08  Michael Hutchinson  <mhutchinson@novell.com>

	* templates/IPadViewXib.xft.xml:
	* templates/IPhoneViewXib.xft.xml:
	* templates/IPadViewController.xft.xml:
	* templates/IPadApplicationXib.xft.xml:
	* templates/IPhoneViewController.xft.xml:
	* templates/IPhoneApplicationXib.xft.xml: Unify categories.

2010-06-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.IPhone.csproj: Remove Mono.Addins targets as
	  they seem to be broken.

2010-06-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.IPhone.csproj:
	* MonoDevelop.IPhone.addin.xml:
	* templates/IPhonePlist.xft.xml: Re-specialized the plist
	  template so categorization remains sane.

2010-06-07  Michael Hutchinson  <mhutchinson@novell.com>
